--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.rore</groupId>
+	<groupId>im.rore</groupId>
 	<artifactId>finagle-es-proxy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Finagle-ES-Proxy</name>
@@ -36,8 +36,8 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<!-- <version>0.90.1</version> -->
-			<version>0.20.6</version>
+			<version>0.90.10</version>  
+			<!-- <version>1.0.0</version> --> 
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>com.twitter</groupId>
 			<artifactId>twitter-server_2.10</artifactId>
-			<version>1.0.1</version>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
